[FIX] website: fix scroll top button without copyright
Steps to reproduce the bug:

- In website dit mode.
- Click on the footer.
- Enable the "Scroll Top Button" option for the footer.
- Disable the "Copyright" option for the footer.
- Bug: There is a white space below the footer.

task-4208475

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1464,6 +1464,13 @@ span.list-inline-item.o_add_language:last-child {
         position: relative;
         z-index: 1;
     }
+    footer#bottom:not(:has(.o_footer_copyright)) {
+        #o_footer_scrolltop_wrapper {
+            height: 3rem !important;
+            margin-top: -3rem;
+            margin-bottom: 1rem;
+        }
+    }
     #o_footer_scrolltop {
         $-footer-color: o-color('footer-custom') or o-color('footer') or rgba(0, 0, 0, 0);
         $-footer-color: mix(rgba($-footer-color, 1.0), $body-bg, percentage(alpha($-footer-color)));
